add message at line file

--- a/_posts/0000-01-02-IrvACD.md
+++ b/_posts/0000-01-02-IrvACD.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Another small step towards becoming part of the big programming community!
 Use the left arrow to go back!
